Enable also the encryption of the mysql connection

--- a/docker/artemis/config/prod-application-local.env
+++ b/docker/artemis/config/prod-application-local.env
@@ -2,7 +2,7 @@ SPRING_PROFILES_ACTIVE=prod,artemis,gitlab,gitlabci,scheduling,athene,apollon,do
 
 SPRING_DATASOURCE_USERNAME="root"
 SPRING_DATASOURCE_PASSWORD=""
-SPRING_DATASOURCE_URL="jdbc:mysql://mysql-internal:3306/Artemis?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC"
+SPRING_DATASOURCE_URL="jdbc:mysql://mysql-internal:3306/Artemis?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&useSSL=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
 
 SPRING_MAIL_USERNAME=""
 SPRING_MAIL_PASSWORD=""
