--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -1,7 +1,10 @@
 [mysqld]
-tls_version = ''
 lower_case_table_names = 1
 character_set_server = utf8mb4
 collation-server = utf8mb4_unicode_ci
 explicit_defaults_for_timestamp = 1
 host_cache_size = 0
+ssl_ca = rootCA.pem
+ssl_cert = artemis.hs-merseburg.de+8.pem
+ssl_key = artemis.hs-merseburg.de+8-key.pem
+require_secure_transport = 1
